@@ -1,0 +1,10 @@
+package io.airlift.http.server.testing;
+
+public class TestTestingHttpServerWithLegacyUriCompliance
+        extends AbstractTestTestingHttpServer
+{
+    TestTestingHttpServerWithLegacyUriCompliance()
+    {
+        super(false, true);
+    }
+}
